oops its already live

--- a/index.html
+++ b/index.html
@@ -86,6 +86,8 @@
           <em>ASMUS</em>, 2023
           <br>
           <a href="data/placeholder.bib">bibtex</a>
+          <br>
+          <b>* Links under construction *</b>
           <p></p>
           <p>We improve on existing mixed-reality ultrasound (MR-US) solutions by developing a portable 
             system that is highly accurate (via stereo triangulation on denser ArUco chessboard keypoints). 
