--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
                 </p>                
                 <p style="text-align:center">
                   <a href="index.html">Research</a> &nbsp;/&nbsp;      
-                  <a href="news.html">Media Mentions</a> &nbsp;/&nbsp;           
-                  <a href="teaching.html">Teaching</a> &nbsp;/&nbsp;      
+                  <a href="news">Media Mentions</a> &nbsp;/&nbsp;           
+                  <a href="teaching">Teaching</a> &nbsp;/&nbsp;      
                   <a href="data/KianWeiCV(Aug 2023).pdf">CV</a> &nbsp;/&nbsp;
                   <a href="https://www.linkedin.com/in/kian-wei">Linkedin</a>
                 </p>
@@ -139,7 +139,7 @@
               <td style="padding:0px">
                 <br>
                 <p style="text-align:right;font-size:small;">
-                  Website template courtesy of <a href="https://github.com/jonbarron/jonbarron_website">https://github.com/jonbarron/jonbarron_website</a>.
+                  Website template courtesy of <a href="https://github.com/jonbarron/jonbarron_website">jonbarron</a>.
                 </p>
               </td>
             </tr>
