--- a/news.html
+++ b/news.html
@@ -1,3 +1,6 @@
+---
+permalink: news/
+---
 <!DOCTYPE HTML>
 <html lang="en">
   <head>
@@ -100,7 +103,7 @@
               <td style="padding:0px">
                 <br>
                 <p style="text-align:right;font-size:small;">
-                  Website template courtesy of <a href="https://github.com/jonbarron/jonbarron_website">https://github.com/jonbarron/jonbarron_website</a>.
+                  Website template courtesy of <a href="https://github.com/jonbarron/jonbarron_website">jonbarron</a>.
                 </p>
               </td>
             </tr>
