--- a/news.html
+++ b/news.html
@@ -1,6 +1,3 @@
----
-permalink: news/
----
 <!DOCTYPE HTML>
 <html lang="en">
   <head>
@@ -103,7 +100,7 @@ permalink: news/
               <td style="padding:0px">
                 <br>
                 <p style="text-align:right;font-size:small;">
-                  Website template courtesy of <a href="https://github.com/jonbarron/jonbarron_website">jonbarron</a>.
+                  Website template courtesy of <a href="https://github.com/jonbarron/jonbarron_website">https://github.com/jonbarron/jonbarron_website</a>.
                 </p>
               </td>
             </tr>
