--- a/teaching.html
+++ b/teaching.html
@@ -110,7 +110,7 @@ permalink: teaching/
               <td style="padding:0px">
                 <br>
                 <p style="text-align:right;font-size:small;">
-                  Website template courtesy of <a href="https://github.com/jonbarron/jonbarron_website">https://github.com/jonbarron/jonbarron_website</a>.
+                  Website template courtesy of <a href="https://github.com/jonbarron/jonbarron_website">jonbarron</a>.
                 </p>
               </td>
             </tr>
