holopocus arxiv links

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
                 </p>                
                 <p style="text-align:center">
                   <a href="index.html">Research</a> &nbsp;/&nbsp;      
-                  <a href="news">Media Mentions</a> &nbsp;/&nbsp;           
-                  <a href="teaching">Teaching</a> &nbsp;/&nbsp;      
+                  <a href="news.html">Media Mentions</a> &nbsp;/&nbsp;           
+                  <a href="teaching.html">Teaching</a> &nbsp;/&nbsp;      
                   <a href="data/KianWeiCV(Aug 2023).pdf">CV</a> &nbsp;/&nbsp;
                   <a href="https://www.linkedin.com/in/kian-wei">Linkedin</a>
                 </p>
@@ -77,7 +77,7 @@
           </script>
         </td>
         <td width="75%" valign="middle">
-          <a href="https://placeholder">
+          <a href="https://arxiv.org/abs/2308.13823">
             <span class="papertitle">HoloPOCUS: Portable Mixed-Reality 3D Ultrasound Tracking, Reconstruction and Overlay</span>
           </a>
           <br>
@@ -85,7 +85,7 @@
           <br>
           <em>ASMUS</em>, 2023
           <br>
-          <a href="data/placeholder.bib">bibtex</a>
+          <a href="data/holopocus2023_arxiv.bib">bibtex</a>
           <br>
           <b>* Links under construction *</b>
           <p></p>
