--- a/news.html
+++ b/news.html
@@ -3,7 +3,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
-    <title>Kian Wei | Media Mentions</title>
+    <title>Kian Wei | News</title>
 
     <meta name="author" content="Kian Wei">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -35,12 +35,13 @@
                 <p>
                   On top of my day job as a data scientist, I am also currently a PhD Student at the National University of Singapore, under the supervision of
                   <a href="https://cde.nus.edu.sg/edic/staff/khoo-eng-tat/">A/Prof Khoo Eng Tat</a>.
-                </p>                
+                </p> 
+                <br>               
                 <p style="text-align:center">
-                  <a href="index.html">Research</a> &nbsp;/&nbsp;      
-                  <a href="news.html">Media Mentions</a> &nbsp;/&nbsp;           
-                  <a href="teaching.html">Teaching</a> &nbsp;/&nbsp;      
-                  <a href="data/KianWeiCV(Aug 2023).pdf">CV</a> &nbsp;/&nbsp;
+                  <a href="index.html">Research Projects</a> &nbsp;/&nbsp;       
+                  <a href="news.html"><u>News & Media</u></a> &nbsp;/&nbsp;  
+                  <a href="teaching.html">Teaching</a> &nbsp;/&nbsp;                        
+                  <!-- <a href="data/KianWeiCV(Aug 2023).pdf">CV</a> &nbsp;/&nbsp; -->
                   <a href="https://www.linkedin.com/in/kian-wei">Linkedin</a>
                 </p>
               </td>
@@ -49,51 +50,72 @@
               </td>
             </tr>
           </tbody></table>
+
+<!--#region media  -->
+
           <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
-              <tr>
-              <td style="padding:20px;width:100%;vertical-align:middle">
-                <h2>Media Mentions</h2>
-              </td>
-            </tr>
-          </tbody></table>
-          <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+            <tr>
+            <td style="padding:20px;width:100%;vertical-align:middle">
+              <h2>News & Media</h2>
+            </td>
+          </tr>
+        </tbody></table>
+        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
 
-      <tr>
-        <td style="padding:20px;width:25%;vertical-align:middle">
-          <img src="images/media1_ultrasound.png" alt="3DSP" width="180" height="120" style="border-style: none">
-        </td>
-        <td width="75%" valign="middle">
-          <a href="https://www.straitstimes.com/tech/augmented-reality-tech-to-speed-up-ultrasound-scan-results-help-with-surgical-planning">
-            <span class="papertitle">Augmented reality tech to deliver faster ultrasound scan results, help with surgical planning | The Straits Times</span>
-          </a>
-          <br>
-          <em>11 May 2023</em>           
-          <br>
-          <p></p>
-          <p>"Doctors can soon see scans in real time through an augmented reality (AR) visor 
-            that helps them to quickly diagnose injuries or get an update on the status of tumours."</p>
-        </td>
-      </tr>                  
+    <tr>
+      <td style="padding:20px;width:25%;vertical-align:middle">
+        <img src="images/media3_dental.jpg" alt="3DSP" width="180" height="120" style="border-style: none">
+      </td>
+      <td width="75%" valign="middle">
+        <a href="https://cde.nus.edu.sg/news-detail/research-applying-ar-to-dental-surgery-wins-award/">
+          <span class="papertitle">Research applying AR to dental surgery wins award | CDE NUS</span>
+        </a>
+        <br>
+        <em>13 Dec 2024</em>           
+        <br>
+        <p></p>
+        <p>"Research titled “Effectiveness of Hololens Augmented Reality (AR) Headset in Dental Implant Surgery”, helmed by Master’s student 
+          Lin Zhiyi (Dentistry), recently clinched the Best Presenter (Talent Discovery Award) at the Oral Reconstruction International Symposium 2024, 
+          held in Bangkok between 14-16 November."</p>
+      </td>
+    </tr>    
 
-      <tr>
-        <td style="padding:20px;width:25%;vertical-align:middle">
-          <img src="images/media2_vein.png" alt="3DSP" width="180" height="120" style="border-style: none">
-        </td>
-        <td width="75%" valign="middle">
-          <a href="https://doi.org/10.3390/electronics12020292">
-            <span class="papertitle">NUHS testing AI, AR to help locate hard-to-find veins in some patients | The Straits Times</span>
-          </a>
-          <br>
-          <em>3 December 2021</em>          
-          <br>
-          <p>"The veins of some patients can be difficult to find for drawing blood as they may be small or not easily visible under the skin. 
-            But artificial intelligence (AI) and augmented reality (AR) may soon address this issue."
-          </p>
-        </td>
-      </tr>     
+    <tr>
+      <td style="padding:20px;width:25%;vertical-align:middle">
+        <img src="images/media1_ultrasound.png" alt="3DSP" width="180" height="120" style="border-style: none">
+      </td>
+      <td width="75%" valign="middle">
+        <a href="https://www.straitstimes.com/tech/augmented-reality-tech-to-speed-up-ultrasound-scan-results-help-with-surgical-planning">
+          <span class="papertitle">Augmented reality tech to deliver faster ultrasound scan results, help with surgical planning | The Straits Times</span>
+        </a>
+        <br>
+        <em>11 May 2023</em>           
+        <br>
+        <p></p>
+        <p>"Doctors can soon see scans in real time through an augmented reality (AR) visor 
+          that helps them to quickly diagnose injuries or get an update on the status of tumours."</p>
+      </td>
+    </tr>                  
+
+    <tr>
+      <td style="padding:20px;width:25%;vertical-align:middle">
+        <img src="images/media2_vein.png" alt="3DSP" width="180" height="120" style="border-style: none">
+      </td>
+      <td width="75%" valign="middle">
+        <a href="https://doi.org/10.3390/electronics12020292">
+          <span class="papertitle">NUHS testing AI, AR to help locate hard-to-find veins in some patients | The Straits Times</span>
+        </a>
+        <br>
+        <em>3 December 2021</em>          
+        <br>
+        <p>"The veins of some patients can be difficult to find for drawing blood as they may be small or not easily visible under the skin. 
+          But artificial intelligence (AI) and augmented reality (AR) may soon address this issue."
+        </p>
+      </td>
+    </tr>     
 
 
-          </tbody></table>
+<!--#endregion -->
 
           <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
             <tr>
