--- a/teaching.html
+++ b/teaching.html
@@ -35,12 +35,13 @@
                 <p>
                   On top of my day job as a data scientist, I am also currently a PhD Student at the National University of Singapore, under the supervision of
                   <a href="https://cde.nus.edu.sg/edic/staff/khoo-eng-tat/">A/Prof Khoo Eng Tat</a>.
-                </p>                
+                </p> 
+                <br>               
                 <p style="text-align:center">
-                  <a href="index.html">Research</a> &nbsp;/&nbsp;      
-                  <a href="news.html">Media Mentions</a> &nbsp;/&nbsp;           
-                  <a href="teaching.html">Teaching</a> &nbsp;/&nbsp;
-                  <a href="data/KianWeiCV(Aug 2023).pdf">CV</a> &nbsp;/&nbsp;
+                  <a href="index.html">Research Projects</a> &nbsp;/&nbsp;   
+                  <a href="news.html">News & Media</a> &nbsp;/&nbsp;
+                  <a href="teaching.html"><u>Teaching</u></a> &nbsp;/&nbsp;                          
+                  <!-- <a href="data/KianWeiCV(Aug 2023).pdf">CV</a> &nbsp;/&nbsp; -->
                   <a href="https://www.linkedin.com/in/kian-wei">Linkedin</a>
                 </p>
               </td>
@@ -49,58 +50,65 @@
               </td>
             </tr>
           </tbody></table>
-          <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
-              <tr>
-              <td style="padding:20px;width:100%;vertical-align:middle">
-                <h2>Teaching</h2>
-              </td>
-            </tr>
-          </tbody></table>
-          <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
-
-      <tr>
-        <td style="padding:20px;width:25%;vertical-align:middle">
-          <img src="images/cde_logo.png" alt="3DSP" width="162" height="120" style="border-style: none">
-        </td>
-        <td width="75%" valign="middle">
-          <a href="https://nusmods.com/courses/EE3801/data-engineering-principles">
-            <span class="papertitle">EE3801 -- Data Engineering Principles</span>
-          </a>
-          <br>
-          Teaching Assistant
-          <br>
-          <em>Jun 2020 to Dec 2020</em>           
-          <br>
-          <p></p>
-          <p>Involved in setting up course materials and provided weekly consultations for a new 
-            Data Engineering module catered to engineering undergraduates. Set up and tested data 
-            processing cluster on AWS ParallelCluster, integrating Slurm and Bash scripts.</p>
-        </td>
-      </tr>                  
-
-      <tr>
-        <td style="padding:20px;width:25%;vertical-align:middle">
-          <img src="images/soc_logo.jpg" alt="3DSP" width="162" height="120" style="border-style: none">
-        </td>
-        <td width="75%" valign="middle">
-          <a href="https://nusmods.com/courses/IT1007/introduction-to-programming-with-python-and-c">
-            <span class="papertitle">IT1007 -- Introduction to Programming with Python and C</span>
-          </a>
-          <br>
-          Teaching Assistant
-          <br>
-          <em>Aug 2018 to Dec 2018</em>           
-          <br>
-          <p></p>
-          <p>Planned and conducted weekly laboratory sessions, consultations, and grading.
-            Covered introductory programming methodology and basic applications, taught in Python and C.
-            Received above average evaluation and feedback from surveyed students regarding teaching performance.
-          </p>
-        </td>
-      </tr>     
 
 
-          </tbody></table>
+<!--#region teaching  -->
+
+<table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+  <tr>
+  <td style="padding:20px;width:100%;vertical-align:middle">
+    <h2>Teaching</h2>
+  </td>
+</tr>
+</tbody></table>
+
+<table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+
+  <tr>
+    <td style="padding:20px;width:25%;vertical-align:middle">
+      <img src="images/cde_logo.png" alt="3DSP" width="162" height="120" style="border-style: none">
+    </td>
+    <td width="75%" valign="middle">
+      <a href="https://nusmods.com/courses/EE3801/data-engineering-principles">
+        <span class="papertitle">EE3801 -- Data Engineering Principles</span>
+      </a>
+      <br>
+      Teaching Assistant
+      <br>
+      <em>Jun 2020 to Dec 2020</em>           
+      <br>
+      <p></p>
+      <p>Involved in setting up course materials and provided weekly consultations for a new 
+        Data Engineering module catered to engineering undergraduates. Set up and tested data 
+        processing cluster on AWS ParallelCluster, integrating Slurm and Bash scripts.</p>
+    </td>
+  </tr>                  
+
+  <tr>
+    <td style="padding:20px;width:25%;vertical-align:middle">
+      <img src="images/soc_logo.jpg" alt="3DSP" width="162" height="120" style="border-style: none">
+    </td>
+    <td width="75%" valign="middle">
+      <a href="https://nusmods.com/courses/IT1007/introduction-to-programming-with-python-and-c">
+        <span class="papertitle">IT1007 -- Introduction to Programming with Python and C</span>
+      </a>
+      <br>
+      Teaching Assistant
+      <br>
+      <em>Aug 2018 to Dec 2018</em>           
+      <br>
+      <p></p>
+      <p>Planned and conducted weekly laboratory sessions, consultations, and grading.
+        Covered introductory programming methodology and basic applications, taught in Python and C.
+        Received above average evaluation and feedback from surveyed students regarding teaching performance.
+      </p>
+    </td>
+  </tr>     
+
+
+      </tbody></table>
+
+<!--#endregion -->
 
           <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
             <tr>
