--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                   I am a full-time data scientist at <a href="https://www.nuhs.edu.sg/Pages/Home.aspx">National University Health System (NUHS)</a> in Singapore. 
                   Within NUHS, I manage the technical research and development portfolio for the 
                   <a href="https://www.nuhs.edu.sg/research/research-stories/Pages/nuhs-embarks-on-holomedicine-research-in-singapore-using-mixed-reality-technology-to-enhance-patient-care.aspx"> NUHS Holomedicine Programme</a>, 
-                  with a focus on <b>mixed reality</b>, <b>applied computer vision</b> and <b>medical image analysis</b>.
+                  with a focus on <b>augmented reality</b>, <b>applied computer vision</b> and <b>medical image analysis</b>.
                 </p>
                 <p>
                   Working closely with clinicians and other healthcare professionals, many of the research output have 
@@ -63,6 +63,11 @@
           </tbody></table>
           <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody> -->
 
+            <p>Much of my research deals with the intersection between augmented reality, applied computer vision and medical image analysis.
+              That being said, the below publications and projects are grouped into a few main categories for ease of browsing, depending on 
+              the project's primary focus/contribution.
+            </p>
+
       <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
         <tr>
           <td style="padding:20px;width:100%;vertical-align:middle">
@@ -71,7 +76,6 @@
         </tr>
       </tbody></table>
       <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
-
 
       <tr onmouseout="holopocus_stop()" onmouseover="holopocus_start()">
         <td style="padding:20px;width:25%;vertical-align:middle">
