--- a/teaching.html
+++ b/teaching.html
@@ -26,7 +26,7 @@
                   I am a full-time data scientist at <a href="https://www.nuhs.edu.sg/Pages/Home.aspx">National University Health System (NUHS)</a> in Singapore. 
                   Within NUHS, I manage the technical research and development portfolio for the 
                   <a href="https://www.nuhs.edu.sg/research/research-stories/Pages/nuhs-embarks-on-holomedicine-research-in-singapore-using-mixed-reality-technology-to-enhance-patient-care.aspx"> NUHS Holomedicine Programme</a>, 
-                  with a focus on <b>mixed reality</b>, <b>applied computer vision</b> and <b>medical image analysis</b>.
+                  with a focus on <b>augmented reality</b>, <b>applied computer vision</b> and <b>medical image analysis</b>.
                 </p>
                 <p>
                   Working closely with clinicians and other healthcare professionals, many of the research output have 
